--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Cấu hình server
 server.port=8080
+
+# Bảo mật JWT
+jwt.secret=this-is-a-very-secret-key-1234567890
+jwt.expiration=86400000
