sai thi e reset huhu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Cấu hình server
 server.port=8080
+server.address=0.0.0.0
 
 # Bảo mật JWT
 jwt.secret=this-is-a-very-secret-key-1234567890
