--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=focusflow
 
 # Kết nối tới MySQL trên Railway
-spring.datasource.url=jdbc:mysql://root:DSxuVzPvfxCifjpREwGuNmVfpbDvOFRZ@shinkansen.proxy.rlwy.net:22035/railway
+spring.datasource.url=jdbc:mysql://root:JMyQUyNBFdylbfEjadussfjFgXSljSOG@yamanote.proxy.rlwy.net:14312/railway
 spring.datasource.username=root
-spring.datasource.password=DSxuVzPvfxCifjpREwGuNmVfpbDvOFRZ
+spring.datasource.password=JMyQUyNBFdylbfEjadussfjFgXSljSOG
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate config
