--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<!-- Spring Boot WebSocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 		<!-- MySQL Driver -->
 		<dependency>
         	<groupId>com.mysql</groupId>
