--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
 			<version>1.41.5</version>
 		</dependency>
 
+		<!-- Mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
