--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,12 @@ openai.api.key=sk-or-v1-a43956dcbbcc9359632d5aa476415691b8f6fe227f2414ff72596167
 openai.api.url=https://openrouter.ai/api/v1/chat/completions
 openai.model=google/gemma-3-12b-it:free
 
+# Gửi Email reset password
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=focusflow4725@gmail.com
+spring.mail.password=xomxgrvdoitwydsd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+app.reset-password-url=https://focusflow-reset.netlify.app
+
